<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.GameListFragment">

    <data>
        <variable
            name="vm"
            type="co.mbznetwork.gamesforyou.viewmodel.GameListViewModel" />

        <import type="android.view.View"/>
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="8dp"
                android:paddingEnd="40dp"
                android:paddingStart="8dp"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionSearch"
                android:hint="@string/search"
                android:background="@drawable/bg_edit_text"/>

            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clear"
                app:layout_constraintTop_toTopOf="@id/et_search"
                app:layout_constraintBottom_toBottomOf="@id/et_search"
                app:layout_constraintEnd_toEndOf="@id/et_search"
                android:padding="8dp"
                android:visibility="@{vm.isSearching ? View.VISIBLE : View.GONE}"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_games"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/et_search"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp"
                tools:listitem="@layout/item_game"/>

            <TextView
                android:id="@+id/tv_empty_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="@id/rv_games"
                app:layout_constraintBottom_toBottomOf="@id/rv_games"
                android:text="@string/no_items_found"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>