...
                android:scaleType="centerCrop"
                imageUrl="@{game.image}"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_game_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Lorem ipsum dolor sit amet amet amet amet amet"
            android:text="@{game.name}"
            app:layout_constraintTop_toTopOf="@id/cv_image"
            app:layout_constraintStart_toEndOf="@id/cv_image"
...
